# Tyrex_PM

./: .env.example  .gitignore  README.md  _analyze_recon5.py  _inv_inverse_race.py  _inv_inverse_race2.py  _inv_reservation.py  _inv_reservation2.py  commandes.md  pyproject.toml  run.sqlite  spike_path_a.py  summary.json  summary.md
.tmp_dbg/: ve.json
Docs/: Architecture.md  CONFIG_MODEL.md  DEVELOPMENT.md  LIVE_ARCHITECTURE.md  OPERATIONS.md  README.md  dependency_lock.md  developer_guide.md  generale_workflow.md  log_validation_playbook.md  logging_system_guide.md  reporting_fact_model.md
Docs/Implementation/: Phase_B_planing.md  V2_migration_plan.md  architecture_review.md  c1_closeout_note.md  c1_shadow_run_guide.md  c1_validation_review.md  c2_validation_readiness_review.md  current_state.md  documentation_reconciliation_2026-04.md  end_to_end_review_logic.md  end_to_end_rewiew_logic.md  logging_sources_review.md  logging_workflow_review.md  (+12 more)
config/: v1.example.yaml  v1_markets.yaml
examples/: order_lifecycle_smoke.py
scripts/: deposit_wallet_collateral_setup.py  diagnose_clob_wallet_modes.py  generate_clob_api_creds.py  get_token_id.py  guru_primary_report.py  guru_shadow_report.py  identify_deposit_wallet.py  probe_books.py  resolve_markets.py  run_guru.py  setup_deposit_wallet_v2.py  show_clob_wallet_balance.py  spike_nautilus_polymarket_exec.py  spike_rtds_activity.py  v2_collateral_probe.py  v2_wallet_mode.py  v2_wallet_watch.py  v2_wrap_to_pusd.py  verify_polymarket_auth.py
tests/: conftest.py  test_allocation_exit_lifecycle.py  test_allocation_ledger.py  test_allocation_ledger_integration.py  test_allocation_ledger_sell_semantics.py  test_allocation_test_e2e.py  test_allocation_test_strategy.py  test_allowlist.py  test_architecture_guards.py  test_book_check.py  test_bus.py  test_clob_bridge_v2.py  test_clob_env_aliases.py  test_clob_heartbeat_state_machine.py  test_clob_wallet_sync_v2.py  test_config_load.py  test_copy_strategy_architecture.py  test_data_api_normalize.py  test_deployment.py  test_deployment_budget.py  test_deployment_evidence.py  test_deposit_wallet_collateral_setup_script.py  test_exec_reconciliation_settings.py  test_exit_lifecycle_p35.py  test_first_v2_sync_gate.py  test_gamma_tradeable.py  test_generate_clob_api_creds_script.py  test_ghost_short_guard.py  test_guru_cache_warmup.py  test_guru_compose_build.py  test_guru_exit_allocation_sizing.py  test_guru_instrument_dynamic.py  test_guru_run_logging.py  test_guru_strategy_golden.py  test_guru_stream.py  test_in_flight_reservations.py  test_inverse_race_tombstone.py  test_live_attest_unit.py  test_live_stub.py  test_market_info_cache.py  (+42 more)
(+424 files in other folders)
