[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tyrex-pm"
version = "0.1.0"
description = "Polymarket copy-trading platform (Tyrex_PM) — see Docs/Implementation/Project starter/"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "py-clob-client>=0.34.0",
    "python-dotenv>=1.0.0",
    "nautilus_trader[polymarket]>=1.220.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
