[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tyrex-pm"
version = "0.2.0"
description = "Polymarket-native trading stack (Tyrex_PM rebuild)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # py-clob-client-v2 uses ``httpx.Client(http2=True)``; httpx 1.0 pre-releases removed ``http2``.
  "httpx>=0.27.0,<1",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]
live = [
  "py-clob-client-v2>=1.0.0",
  "websockets>=12.0",
  "python-dotenv>=1.0.0",
  "py-builder-signing-sdk>=0.0.2",
  "py-builder-relayer-client>=0.0.2rc1",
  "eth_abi>=5.0.0",
]

[project.scripts]
tyrex-pm = "tyrex_pm.runtime.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
